fixed logo left side spacing

--- a/client/src/scss/components/navbar.scss
+++ b/client/src/scss/components/navbar.scss
@@ -31,10 +31,6 @@
     .navbar-logo {
         width: fit-content;
         line-height: var(--spacing-32);
-
-        svg {
-            min-width: var(--spacing-64);
-        }
     }
 
     .navbar-hamburger {
